--- a/program/index.html
+++ b/program/index.html
@@ -603,9 +603,9 @@
                 <header class="masthead">
                     <div class="container">
                         <div class="masthead-subheading">AISS 2024</div>
-                        <div class="masthead-heading text-uppercase">Artificial Intelligence Summer School</div>
+                        <div class="masthead-heading text-uppercase">Winter School on Deep Learning for Vision and Language Modelling</div>
                         <b>
-                            <div class="masthead-subheading">17th-18th May 2024</div>
+                            <div class="masthead-subheading">6th-13th May 2024</div>
                         </b>
                         <hr>
                         <a class="btn btn-primary btn-xl text-uppercase" href="../index.html#register">Register</a>
