--- a/program/index.html
+++ b/program/index.html
@@ -602,10 +602,10 @@
             <div class="carousel-item active">
                 <header class="masthead">
                     <div class="container">
-                        <div class="masthead-subheading">AISS 2024</div>
+                        <!-- <div class="masthead-subheading">AISS 2024</div>-->
                         <div class="masthead-heading text-uppercase">Winter School on Deep Learning for Vision and Language Modelling</div>
                         <b>
-                            <div class="masthead-subheading">6th-13th May 2024</div>
+                            <div class="masthead-subheading">6th-13th January 2025</div>
                         </b>
                         <hr>
                         <a class="btn btn-primary btn-xl text-uppercase" href="../index.html#register">Register</a>
