--- a/program/index.html
+++ b/program/index.html
@@ -1017,14 +1017,13 @@
             <div class="  row bg-gray-100 p-8">
                 <div class="col-md-6">
                     <h2 class="text-2xl text-white mb-4">Venue</h2>
-                    <p class="text-white">B003, Ground Floor R&D Block<br>IIIT-Delhi, Okhla Phase 3, New
-                        Delhi 110020<br>Near Govindpuri Metro Station</p>
-                    <a class="text-blue-500 hover:text-blue-700" href="https://goo.gl/maps/MEinWpNLvhvwae87A">View on
+                    <p class="text-white">Department of Computer Science and Engineering,<br> H-Block Academic Complex, <br> ndian Institute of Technology Guwahati. Guwahati - 781039</p>
+                    <a class="text-blue-500 hover:text-blue-700" href="https://maps.app.goo.gl/hgp16sEPhK9k8XCG8">View on
                         Map</a>
                 </div>
                 <div class="col-md-6 queryForm">
                     <h2 class="text-white KeynoteP">Questions?</h2>
-                    <form class="row" action="mailto:aiss@iiitd.ac.in
+                    <form class="row" action="mailto:arijit@iitg.ac.in
                     " method="post" enctype="text/plain">
                         <input type="text" placeholder="Name"
                             class=" col-md-12 inline-block w-full rounded-md py-2 px-4 mb-2" />
