--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Artificial Intelligence Summer School</title>
+    <title>Winter School on Deep Learning for Vision and Language Modelling</title>
     <!-- Bootstrap icons-->
     <link href="../cdn.jsdelivr.net/npm/bootstrap-icons%401.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Favicon-->
