--- a/index.html
+++ b/index.html
@@ -11752,9 +11752,9 @@ textarea {
             <div class="carousel-item active">
                 <header class="masthead">
                     <div class="container">
-                        <div class="masthead-subheading">AISS 2024</div>
+                        <!-- <div class="masthead-subheading">AISS 2024</div>-->
                         <div class="masthead-heading text-uppercase">
-                            <span>Artificial Intelligence Summer School</span>
+                            <span>Winter School on Deep Learning for Vision and Language Modelling</span>
                         </div>
                         <!-- <div class="masthead-subheading"></div>
                         <div class="text-notification"><b>Notification:</b> The organizing team is keeping close watch
@@ -11766,7 +11766,7 @@ textarea {
                         <div class="masthead-subheading"></div>
                         <div class="masthead-subheading"></div> -->
                         <b>
-                            <div class="masthead-subheading">17th-18th May 2024</div>
+                            <div class="masthead-subheading">6th-13th January 2025</div>
                         </b>
                         <hr>
                         <a class="btn btn-primary btn-xl text-uppercase register-button" style="border: none;"
