--- a/index.html
+++ b/index.html
@@ -11723,7 +11723,7 @@ textarea {
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
 
 
-                    <li class="nav-item"><a class="nav-link" href=".html">Home</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href=".html">Home</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link" href="#activities">Activites</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="program/index.html">Program</a></li>
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
