--- a/index.html
+++ b/index.html
@@ -11920,24 +11920,26 @@ textarea {
 
                         <div class="col-md-4">
                             <div class="team-member">
-                                <img src="assets/img/logos/tih.png" alt="..." />
-                                <p class="text-muted">iHub Anubhuti-IIITD Foundation</p>
+                                <img src="assets/img/logos/tidf.png" alt="..." />
+                                <p class="text-muted">TIDF-IITG</p>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="team-member">
-                                <img src="assets/img/logos/gg.png" alt="..." />
-                                <p class="text-muted">Google Research India</p>
+                                <img src="assets/img/logos/iitg.png" alt="..." />
+                                <p class="text-muted">IIT Guwahati</p>
                             </div>
                         </div>
 
+                        <!--
                         <div class="col-md-4">
-                          <div class="team-member">
-                              <img src="assets/img/logos/lwt.jpg" alt="..." />
-                              <p class="text-muted">Learning While Travelling</p>
-                          </div>
-                      </div>
+                        <div class="team-member">
+                        <img src="assets/img/logos/lwt.jpg" alt="..." />
+                        <p class="text-muted">Learning While Travelling</p>
+                    </div>
+                    </div>
+                        -->
 
                     </div>
 
