--- a/index.html
+++ b/index.html
@@ -11920,7 +11920,7 @@ textarea {
 
                         <div class="col-md-4">
                             <div class="team-member">
-                                <img src="assets/img/logos/tidf.png" alt="..." />
+                                <img src="assets/img/logos/tidf2.jpg" alt="..." />
                                 <p class="text-muted">TIDF-IITG</p>
                             </div>
                         </div>
