--- a/index.html
+++ b/index.html
@@ -11826,19 +11826,11 @@ textarea {
     <section class="page-section" id="services">
         <div class="container">
             <div class="text-center-asli-wala">
-                <h2 class="section-heading text-uppercase">AISS 2024</h2>
+                <h2 class="section-heading text-uppercase">Aim</h2>
             </div>
             <div class="text-center">
                 <!-- <h2 class="section-heading text-uppercase">Home</h2> -->
-                <p class="section-subheading Home text-muted" >Rapid advancements in the field of AI have unveiled new techniques that can provide innovative and
-                    definitive solutions to the complex challenges faced by students, industry experts, and researchers
-                    presently. However, the rapid pace of this progress has made it difficult for many to keep in touch with
-                    these novel solutions. At least once a year, you can learn about the latest advancements in AI by attending
-                    the Artificial Intelligence Summer School. This year’s Summer School will delve into the increasingly
-                    popular topic of LLMs. If you are excited about learning Artificial Intelligence from researchers
-                    themselves through passionate discussions or exploring the myriad applications of AI in startups and
-                    companies, join us! The Artificial Intelligence Summer School hosted at Indraprastha Institute of
-                    Technology, Delhi will be held on 17th - 18th May 2024.
+                <p class="section-subheading Home text-muted" >Write AIM here!
                 </p>
             </div>
             <div class="row text-center">
@@ -11865,13 +11857,10 @@ textarea {
                                 <path d="M23.5002 0C18.2143 0 13.1884 1.75467 9.07903 4.96007C8.46016 4.69197 7.7713 4.63073 7.11483 4.78543C6.45837 4.94012 5.86934 5.30251 5.43529 5.81873C5.00125 6.33495 4.74535 6.97744 4.70563 7.65071C4.66592 8.32399 4.84451 8.99211 5.21486 9.55578C5.5852 10.1194 6.12754 10.5486 6.76127 10.7794C7.39499 11.0102 8.08628 11.0303 8.73238 10.8369C9.37848 10.6434 9.9449 10.2466 10.3475 9.70548C10.75 9.16436 10.9673 8.50778 10.9669 7.83333C10.9669 7.71427 10.9449 7.5999 10.9308 7.48397C14.5103 4.65816 18.9397 3.12501 23.5002 3.13333C30.1773 3.13333 36.0335 9.35613 36.0335 16.45C36.0335 23.793 30.0598 29.7667 22.7169 29.7667H21.9335V32.9H22.7169C31.7879 32.9 39.1669 25.521 39.1669 16.45C39.1669 13.4968 38.3334 10.6659 36.9109 8.20933C41.1644 11.9474 43.8669 17.4088 43.8669 23.5C43.8669 26.8135 43.0961 29.975 41.5764 32.8937L44.3557 34.3398C46.0919 30.9902 46.9989 27.2728 47.0002 23.5C47.0002 10.5421 36.4581 0 23.5002 0Z" fill="black"/>
                                 </svg>
                         </span>
-                        <h4 class="my-3">Large Language Models (LLMs)</h4>
+                        <h4 class="my-3">Scope </h4>
                     </div>
                     <div class="homeP">
-                        <p class="text-muted">The theme of AISS 2024 will be Large Language Models (LLMs). LLMs have enabled information
-                            analysis, decision-making, content generation, idea exploration, and much more for the average
-                            individual. Becoming increasingly popular due to recent advancements, LLMs have revolutionized all
-                            three stages of knowledge - knowledge acquisition, knowledge processing, and knowledge generation.</p>
+                        <p class="text-muted">Write Scope here!</p>
                     </div>
                 </div>
                 <!-- <div class="col-md-6">
