--- a/index.html
+++ b/index.html
@@ -11933,9 +11933,9 @@ textarea {
                  <div class="row people ">
                     <div class="col-md-6">
                       <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/image%2012.png" alt="..." />
-                        <h4>Prof. Pushpak Bhattacharyya</h4>
-                        <p class="text-muted">FNAE, Abdul Kalam National Fellow Professor<br>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>person 1</h4>
+                        <p class="text-muted"> Professor<br>
                           Computer Science and Engineering Department<br>
                           Indian Institute of Technology Bombay</p>
                             <!-- <div class="bio">
@@ -11976,8 +11976,8 @@ textarea {
 
                     <div class="col-md-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/sameep.webp" alt="..." />
-                            <h4>Dr Sameep Mehta</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                            <h4>person 2</h4>
                             <p class="text-muted">IBM Distinguished Engineer and Senior Manager<br>
                                Data and AI Platforms<br>
                                 IBM Research AI</p>
@@ -12003,8 +12003,8 @@ textarea {
                 <!-- <div class="row people ">
                   <div class="col-md-6">
                       <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="assets/img/team/sriparna.png" alt="..." />
-                          <h4>Sriparna Saha</h4>
+                          <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                          <h4>person 3</h4>
                           <p class="text-muted">Associate Professor<br>
                             Department of Computer Science and Engineering<br>
                             Indian Institute of Technology Patna</p>
@@ -12026,8 +12026,8 @@ textarea {
                   </div>
                   <div class="col-md-6">
                       <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="assets/img/team/image 12.png" alt="..." />
-                          <h4>Dr. Pushpak Bhattacharyya</h4>
+                          <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                          <h4>person 1</h4>
                           <p class="text-muted">FNAE, Abdul Kalam National Fellow Professor<br>
                             Computer Science and Engineering Department<br>
                             Indian Institute of Technology Bombay</p>
@@ -12072,8 +12072,8 @@ textarea {
                 <div class="row people ">
                     <div class="col-md-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/anoop.png" alt="..." />
-                            <h4>Dr Anoop Kunchukuttan</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                            <h4>person 3</h4>
                             <p class="text-muted">Researcher-Microsoft<br>
                               Co-founder and Co-lead-AI4Bharat <br>
                               Adjunct Faculty-IIT Madras</p>
@@ -12103,8 +12103,8 @@ textarea {
                     </div>
                     <div class="col-md-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/erik.jpg" alt="..." />
-                            <h4>Prof Erik Cambria</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                            <h4>person 4</h4>
                             <p class="text-muted">Associate Professor<br>
                               School of Computer Science and Engineering<br>
                               Founder of SenticNet.
@@ -12132,8 +12132,8 @@ textarea {
 
                     <div class="col-md-4">
                       <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="assets/img/team/saptarshi.png" alt="..." />
-                          <h4>Dr Saptarshi Ghosh</h4>
+                          <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                          <h4>person 5</h4>
                           <p class="text-muted">Associate Professor<br>
                             Department of Computer Science and Engineering<br>
                             Indian Institute of Technology Kharagpur</p>
@@ -12166,8 +12166,8 @@ textarea {
                 <div class="row people">
                   <div class="col-md-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/sriparna.png" alt="..." />
-                        <h4>Dr Sriparna Saha</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>person 6</h4>
                         <p class="text-muted">Associate Professor<br>
                           Department of Computer Science and Engineering<br>
                           Indian Institute of Technology Patna</p>
@@ -12191,8 +12191,8 @@ textarea {
                    
                     <div class="col-md-6">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/balaji.png" alt="..." />
-                            <h4>Balaji Krishnamurthy</h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                            <h4>person 7</h4>
                             <p class="text-muted">Senior Principal Scientist and Senior Director<br>
                               Media and Data Science Research Lab<br>
                               Adobe Systems</p>
