--- a/index.html
+++ b/index.html
@@ -12630,8 +12630,8 @@ textarea {
             <div class="row">
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/DebarkaS.jpg" alt="..." />
-                        <h4>Dr Debarka Sengupta</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 1</h4>
                         <p class="text-muted">Center Head & Co-organizer</p>
                         <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Diana Petersen Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
@@ -12642,8 +12642,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/shad.jpg" alt="..." />
-                        <h4>Dr Md Shad Akhtar</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 2</h4>
                         <p class="text-muted">Co-organizer</p>
                         <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
@@ -12653,8 +12653,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/rajiv.png" alt="..." />
-                        <h4>Dr. Rajiv Ratn Shah</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 3</h4>
                         <p class="text-muted">Co-organizer</p>
                         <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
@@ -12665,8 +12665,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/vikram.png" alt="..." />
-                        <h4>Dr. Vikram Goyal</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 4</h4>
                         <p class="text-muted">Co-organizer</p>
                         <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
@@ -12676,8 +12676,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/dhruv.png" alt="..." />
-                        <h4>Dr. Dhruv Kumar</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 5</h4>
                         <p class="text-muted">Co-organizer</p>
                         <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a> -->
@@ -12687,8 +12687,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/AayuS.jpg" alt="..." />
-                        <h4>Ms. Aayushi Shishodia</h4>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 6</h4>
                         <p class="text-muted">Event Secretary</p>
                         <a class="btn btn-dark btn-social mx-2"
                             href="https://www.linkedin.com/in/aayushi-shishodia-079491205/"
@@ -12697,8 +12697,8 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <!-- <img class="mx-auto rounded-circle" src="assets/img/team/AayuS.jpg" alt="..." />
-                        <h4>Ms. Aayushi Shishodia</h4>
+                        <!-- <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
+                        <h4>Team Member 7</h4>
                         <p class="text-muted">Event Secretary</p>
                         <a class="btn btn-dark btn-social mx-2"
                             href="https://www.linkedin.com/in/aayushi-shishodia-079491205/"
@@ -12707,7 +12707,7 @@ textarea {
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/cyfuse.png" alt="..." />
+                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
                         
                         <h4>Cyfuse</h4>
                         <p class="text-muted">Student Club</p>
@@ -12727,7 +12727,7 @@ textarea {
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">aiss@iiitd.ac.in </h3>
+                <h3 class="section-subheading text-muted">arijit@iitg.ac.in </h3>
             </div>
 
             <div class="  row bg-gray-100 p-8">
