--- a/program/index.html
+++ b/program/index.html
@@ -1493,7 +1493,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">aiss@iiitd.ac.in </h3>
+                <h3 class="section-subheading text-muted">arijit@iitg.ac.in </h3>
             </div>
 
             <div class="  row bg-gray-100 p-8">
