--- a/index.html
+++ b/index.html
@@ -12353,35 +12353,33 @@ textarea {
         <div class="container">
             <div class="team-grid">
                 <div class="intro">
-                    <h2 class="text-center-asli-wala">Hackathon</h2>
+                    <h2 class="text-center-asli-wala">Registration</h2>
                     <div class="text-center">
                         <div class="text-justify">
                             <p class="text-muted">
-                              <b>AISS 2024 HACKATHON <br></b>
-                              <b>Problem statement</b> - Large Multi-Modal Foundation Model for Traffic Accident Analysis / Detection
+                              <b>Winter School<br></b>
+                              <b>Problem statement</b> - DEFINE HERE!
                               <br><br>
-                              <b>Description</b>
+                              <b>Who can apply</b>
                               <ul>
-                                <li>Multi-Modal Traffic Accident Analysis for Safer Roads:- Develop an innovative model to analyze diverse traffic data, uncover accident root causes, and proactively suggest preventive solutions.</li>
-                                <li>Traffic accidents remain a persistent global threat despite extensive safety efforts.
-                                  Traditional models often center on single data sources, failing to capture the complex interplay of factors contributing to accidents.</li>
+                                <li>point 1.</li>
+                                <li>Point 2.</li>
                               </ul>
                             </p>
                             <p class="text-muted">
-                               <br><b>Timeline</b><br>
+                               <br><b>How to Apply</b><br>
                                 
                                <ul>
-                                <li>Round 1 - online</dt>
+                                <li>Step 1 - online</dt>
                                 <dd style="margin-left: 5px;">
-                                  May 03, 2024 - Start Date.<br>
-                                  May 15, 2024 - Final Submission Deadline.
+                                  Dec 23, 2025 - Start Date.<br>
+                                  Dec 30, 2025 - Final Submission Deadline.
                                 </dd>
                                 <li>
-                                  Round 2 - offline at IIITD Campus on 17th May, 2024
+                                  Step 2 - TYPE!!
                                 </li>
                                </ul>
-                                Top 5 candidates will be called to present their work for final round (in presentation format)
-                                All deadlines are at 11:59 PM IST on the corresponding day unless stated otherwise. The competition organizers reserve the right to update the contest timeline if they deem it necessary.
+                                Further Details
                                <br>
                                <br>
                                <b>Prizes:</b>
