--- a/index.html
+++ b/index.html
@@ -12707,7 +12707,7 @@ textarea {
                     <div class="team-member">
                         <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
                         
-                        <h4>Cyfuse</h4>
+                        <h4>Team Member 8</h4>
                         <p class="text-muted">Student Club</p>
                         <a class="btn btn-dark btn-social mx-2"
                             href="https://www.linkedin.com/company/cyfuse/"
