--- a/index.html
+++ b/index.html
@@ -12434,11 +12434,7 @@ textarea {
 
             <div class="text-center">
                 <div class="text-justify">
-                    <h3 class="section-subheading text-muted">The Artificial Intelligence summer school was initiated at the Infosys Center for Artificial Intelligence
-                        (CAI) at Indraprastha Institute of Information Technology, Delhi. AISS 2024 is the 3rd iteration of the
-                        AISS. The new advancements in Artificial Intelligence have the potential to change the way we do things
-                        and offer definitive solutions to current problems. We aim to bring the discussion about these new
-                        advancements to the forefront.</h3>
+                    <h3 class="section-subheading text-muted">The Winter School on Deep Learning for Vision and Language Modelling was initiated at ...</h3>
                 </div>
             </div>
             <ul class="timeline">
@@ -12448,18 +12444,12 @@ textarea {
                     <div class="timeline-panel">
                         <div class="timeline-heading">
                             <h4>2023-2024</h4>
-                            <h4 class="subheading">Federated Learning and Coresets</h4>
+                            <h4 class="subheading">History 1</h4>
                         </div>
                         <div class="text-justify">
                             <div class="timeline-body">
                                 <p class="text-muted">The theme was centered around two cutting-edge 
-                                    concepts Federated Learning and Coresets. These 
-                                    emerging techniques have garnered significant 
-                                    attention for their potential to revolutionize 
-                                    various aspects of AI research and applications. 
-                                    Attendees had the unique opportunity to delve into 
-                                    these innovative topics and explore their practical 
-                                    implications under the guidance of experts in the field.</p>
+                                    concepts Deep leaning.</p>
                             </div>
                         </div>
                     </div>
@@ -12470,15 +12460,12 @@ textarea {
                 <div class="timeline-panel">
                     <div class="timeline-heading">
                         <h4>2022-2023</h4>
-                        <h4 class="subheading">Our Humble Beginnings</h4>
+                        <h4 class="subheading">History 1</h4>
                     </div>
                     <div class="text-justify">
                         <div class="timeline-body">
                             <p class="text-muted">The specific topics covered were Explainable AI (XAI) and
-                                Neuro-symbolic AI, addressing ethical concerns and combining symbolic AI with deep
-                                learning for improved accuracy. The program included talks and discussions tailored
-                                to participants' interests, offering valuable insights into cutting-edge AI
-                                developments.</p>
+                                Generative AI.</p>
                         </div>
                     </div>
                 </div>
