--- a/index.html
+++ b/index.html
@@ -12434,8 +12434,34 @@ textarea {
 
             <div class="text-center">
                 <div class="text-justify">
-                    <h3 class="section-subheading text-muted">The Winter School on Deep Learning for Vision and Language Modelling was initiated at ...</h3>
+                    <h3 class="section-subheading text-muted">The Winter School on Deep Learning for Vision and Language Modelling offers an immersive learning experience for students, industry beginners, and
+faculty members through a well-structured program of lectures, hands-on sessions,
+and lab activities. The event is scheduled from 6th January 2025 to 13th January
+2025, which aligns well with the winter semester gap in engineering colleges,
+ensuring maximum participation. The program will include 48 lectures covering
+theoretical concepts and advanced topics in natural language processing (NLP) and
+computer vision (CV). These lectures will be delivered by a mix of renowned
+academicians and industry professionals, including eight expert sessions by external
+experts of national and international reputation, who will bring cutting-edge insights
+and real-world case studies to the discussions.
+In addition to lectures, the Winter School will feature 16 hours of hands-on sessions
+and 16 hours of lab sessions, enabling participants to apply their learning through
+practical exercises and experiments. These interactive components will focus on
+implementing deep learning techniques for solving real-world problems in language
+and vision, providing valuable exposure to modern tools and frameworks. The
+program&#39;s comprehensive structure ensures that college students gain foundational
+knowledge and practical skills, preparing them for advanced research and job
+opportunities. Beginners in the industry will acquire the expertise needed to address
+real-world challenges effectively. At the same time, faculty members will be equipped
+to integrate contemporary advancements into their academic and research
+endeavors.
+The involvement of 8 external experts further enhances the program&#39;s value, offering
+participants the opportunity to learn from and interact with leaders in the field. By
+combining rigorous academic content with practical exposure, the Winter School
+aims to foster skill development, encourage innovation, and promote interdisciplinary
+research in deep learning for languages and vision.</h3>
                 </div>
+            <!-- 
             </div>
             <ul class="timeline">
                 <li>
@@ -12478,8 +12504,9 @@ textarea {
                             <br />Story!</h4>
                     </div>
                 </li>
-            </ul>
+            </ul> 
         </div>
+            -->
     </section>
 
 
