--- a/index.html
+++ b/index.html
@@ -11830,7 +11830,17 @@ textarea {
             </div>
             <div class="text-center">
                 <!-- <h2 class="section-heading text-uppercase">Home</h2> -->
-                <p class="section-subheading Home text-muted" >Write AIM here!
+                <p class="section-subheading Home text-muted" >
+                    <ul>
+                        <li>
+                            <bf>Awareness and Skill Development: </bf>
+                            To make students and budding industry professionals aware of the transformative potential of deep learning in solving practical problems, particularly in the domains of natural language processing and computer vision.
+                        </li>
+                        <li>
+                            <bf>Knowledge Sharing: </bf>
+                            To facilitate the exchange of ideas and expertise between participants, renowned academicians, and industry professionals, fostering a deeper understanding of cutting-edge developments in the field.
+                        </li>
+                    </ul>
                 </p>
             </div>
             <div class="row text-center">
@@ -11860,7 +11870,7 @@ textarea {
                         <h4 class="my-3">Scope </h4>
                     </div>
                     <div class="homeP">
-                        <p class="text-muted">Write Scope here!</p>
+                        <p class="text-muted">Natural language processing (NLP) and computer vision (CV) have become increasingly significant due to their wide-ranging applications, such as language translation, speech recognition, image analysis, and automation in the healthcare, education, and transportation sectors. For college students, the program will offer a strong foundation in the concepts and techniques of deep learning, preparing them for advanced research and enhancing their employability in emerging technologies. Beginners in the industry will benefit from practical insights into bridging theoretical knowledge with real-world applications, enabling them to contribute effectively to projects involving language and vision-based solutions. Faculty members will gain exposure to the latest developments and tools in the field, supporting their efforts to integrate cutting-edge topics into their teaching and research.</p>
                     </div>
                 </div>
                 <!-- <div class="col-md-6">
