--- a/index.html
+++ b/index.html
@@ -11833,11 +11833,11 @@ textarea {
                 <p class="section-subheading Home text-muted" >
                     <ul>
                         <li>
-                            <bf>Awareness and Skill Development: </bf>
+                            <b>Awareness and Skill Development: </b>
                             To make students and budding industry professionals aware of the transformative potential of deep learning in solving practical problems, particularly in the domains of natural language processing and computer vision.
                         </li>
                         <li>
-                            <bf>Knowledge Sharing: </bf>
+                            <b>Knowledge Sharing: </b>
                             To facilitate the exchange of ideas and expertise between participants, renowned academicians, and industry professionals, fostering a deeper understanding of cutting-edge developments in the field.
                         </li>
                     </ul>
@@ -11943,11 +11943,11 @@ textarea {
                  <div class="row people ">
                     <div class="col-md-6">
                       <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
-                        <h4>person 1</h4>
-                        <p class="text-muted"> Professor<br>
-                          Computer Science and Engineering Department<br>
-                          Indian Institute of Technology Bombay</p>
+                        <img class="mx-auto rounded-circle" src="assets/img/team/Bchanda_round.png" alt="..." />
+                        <h4>Prof. Bhabatosh Chanda</h4>
+                        <p class="text-muted"> Professor (Retired)<br>
+                          Electronics and Communication Sciences Unit<br>
+                          Indian Statistical Institute, Kolkata</p>
                             <!-- <div class="bio">
                                 <p>Ganesh Ramakrishnan is currently serving as an Institute Chair Professor at
                                     the Department of Computer Science and Engineering, IIT Bombay. His areas of
